<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="#000000"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/hello_toronto"
            android:textColor="#00ffff"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/pwd_block2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:textStyle="bold">

            <EditText
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:background="#ffff00"
                android:gravity="center"
                android:hint="@string/username"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_login2"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:background="#0000ff"
                android:gravity="center"
                android:text="@string/ryerson"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="161dp"
                tools:layout_editor_absoluteY="126dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pwd_block3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/fld_pwd3"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:background="#ffff00"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_login3"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:background="#ff00ff"
                android:gravity="center"
                android:text="@string/humber"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pwd_block4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <Button
                android:id="@+id/btn_login4"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:background="#00ff00"
                android:gravity="center"
                android:text="@string/york"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/btn_login5"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:background="#ff0000"
                android:textColor="#ffffff"
                android:gravity="center"
                android:text="@string/seneca"
                android:textSize="20sp"
                android:textStyle="bold"


                />
        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>